Fixed bottom spacing issues for mobile cards

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
@@ -212,6 +212,12 @@
 	a.arrow-link {
 		margin-top: 8px;
 	}
+	a:last-child {
+		margin-bottom: 20px;
+	}
+}
+.cthp-overview .ui-accordion-content .cardBody p:last-child {
+    margin-bottom: 20px;
 }
 .cthp-research .cardBody {
 	p {
